--- a/desafio_modulo_03/src/index.css
+++ b/desafio_modulo_03/src/index.css
@@ -24,6 +24,16 @@ body {
     color: white;
     margin-top: 20px;
 }
+.footer_principal {
+    display: flex;
+    margin-top: 75px;
+    justify-content: center;
+}
+
+.imagens_footer {
+    width: 8vh;
+    margin-left: 20px;
+}
 
 hr {
     margin-top: 25px;
