projeto player de musica

--- a/desafio_modulo_03/src/components/Principal/Principal.module.css
+++ b/desafio_modulo_03/src/components/Principal/Principal.module.css
@@ -18,9 +18,12 @@
 }
 .img {
     display: flex;
+    list-style: none;
+    
 }
 img {
     width: 40vh;
+    
 }
 h3 {
         font-family: 'Rubik', sans-serif;
